feat: backend stabilization and service integration updates