@@ -8,16 +8,23 @@ import com.resumeai.notification.exception.ResourceNotFoundException;
 import com.resumeai.notification.repository.NotificationRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.mail.SimpleMailMessage;
-import org.springframework.mail.javamail.JavaMailSender;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.Comparator;
 import java.util.stream.Collectors;
+
+/**
+ * Manages notification persistence, read-state updates, and realtime WebSocket delivery.
+ * Used by RabbitMQ listeners and notification APIs.
+ */
 
 @Service
 @RequiredArgsConstructor
@@ -25,51 +32,85 @@ import java.util.stream.Collectors;
 public class NotificationService {
 
     private final NotificationRepository notificationRepository;
-    private final JavaMailSender mailSender;
-
-    @Value("${app.email.enabled:false}")
-    private boolean emailEnabled;
-
-    @Value("${app.email.from:noreply@resumeai.com}")
-    private String emailFrom;
-
-    // ─────────────────────────────────────────────────────────────────────
-    // 1. Create & persist a notification
-    // ─────────────────────────────────────────────────────────────────────
+    private final SimpMessagingTemplate messagingTemplate;
+    // Creates and persists notifications, then triggers realtime push.
 
     @Transactional
     public NotificationResponse createNotification(Long userId, NotificationType type, String message) {
-        log.info("Creating notification: userId={}, type={}", userId, type);
+        return createNotification(userId, type, type.name().replace('_', ' '), message, null, null);
+    }
+
+    @Transactional
+    public NotificationResponse createNotification(Long userId, NotificationType type, String title,
+                                                    String message, String eventId, String metadataJson) {
+        // Dedup check: skip if same eventId already processed
+        if (eventId != null && notificationRepository.existsByEventId(eventId)) {
+            log.warn("Duplicate event detected: eventId={}, skipping", eventId);
+            return null;
+        }
+
+        log.info("Creating notification: userId={}, type={}, title={}", userId, type, title);
 
         Notification notification = Notification.builder()
                 .userId(userId)
                 .type(type)
+                .title(title)
                 .message(message)
                 .isRead(false)
+                .eventId(eventId)
+                .metadataJson(metadataJson)
                 .build();
 
         Notification saved = notificationRepository.save(notification);
-        log.debug("Notification saved: id={}", saved.getNotificationId());
-        return toResponse(saved);
-    }
+        log.info("Notification saved: id={}, eventId={}", saved.getNotificationId(), eventId);
 
-    // ─────────────────────────────────────────────────────────────────────
-    // 2. Get all notifications for a user (newest first)
-    // ─────────────────────────────────────────────────────────────────────
+        NotificationResponse response = toResponse(saved);
+
+        // Push via WebSocket asynchronously
+        pushWebSocketNotification(userId, response);
+
+        return response;
+    }
+    // Pushes a single notification update to user-specific WebSocket topic.
+
+    @Async
+    public void pushWebSocketNotification(Long userId, NotificationResponse response) {
+        try {
+            String destination = "/topic/notifications/" + userId;
+            messagingTemplate.convertAndSend(destination, response);
+            log.info("[WebSocket] Pushed notification to {}", destination);
+        } catch (Exception e) {
+            log.error("[WebSocket] Failed to push notification for userId={}: {}",
+                    userId, e.getMessage());
+        }
+    }
+    // Fetches notifications for a user in reverse chronological order.
 
     @Transactional(readOnly = true)
     public List<NotificationResponse> getNotifications(Long userId) {
         log.info("Fetching all notifications for userId={}", userId);
-        return notificationRepository
-                .findByUserIdOrderByCreatedAtDesc(userId)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+        try {
+            return notificationRepository
+                    .findByUserIdOrderByCreatedAtDesc(userId)
+                    .stream()
+                    .map(this::toResponse)
+                    .toList();
+        } catch (Exception ex) {
+            log.error("Failed to fetch notifications for userId={}. Returning empty list. Cause: {}",
+                    userId, ex.getMessage());
+            return List.of();
+        }
     }
 
-    // ─────────────────────────────────────────────────────────────────────
-    // 3. Mark a single notification as read
-    // ─────────────────────────────────────────────────────────────────────
+    @Transactional(readOnly = true)
+    public Page<NotificationResponse> getNotificationsPaginated(Long userId, int page, int size) {
+        log.info("Fetching paginated notifications for userId={}, page={}, size={}", userId, page, size);
+        Pageable pageable = PageRequest.of(page, size);
+        return notificationRepository
+                .findByUserIdOrderByCreatedAtDesc(userId, pageable)
+                .map(this::toResponse);
+    }
+    // Marks a single notification as read.
 
     @Transactional
     public NotificationResponse markAsRead(UUID notificationId) {
@@ -82,19 +123,25 @@ public class NotificationService {
         Notification updated = notificationRepository.save(notification);
         return toResponse(updated);
     }
-
-    // ─────────────────────────────────────────────────────────────────────
-    // 4. Get unread count for a user
-    // ─────────────────────────────────────────────────────────────────────
+    // Returns unread notification count for dashboard badges.
 
     @Transactional(readOnly = true)
     public UnreadCountResponse getUnreadCount(Long userId) {
-        long count = notificationRepository.countByUserIdAndIsRead(userId, false);
-        log.info("Unread count for userId={}: {}", userId, count);
-        return UnreadCountResponse.builder()
-                .userId(userId)
-                .unreadCount(count)
-                .build();
+        try {
+            long count = notificationRepository.countByUserIdAndIsRead(userId, false);
+            log.info("Unread count for userId={}: {}", userId, count);
+            return UnreadCountResponse.builder()
+                    .userId(userId)
+                    .unreadCount(count)
+                    .build();
+        } catch (Exception ex) {
+            log.error("Failed to fetch unread count for userId={}. Returning 0. Cause: {}",
+                    userId, ex.getMessage());
+            return UnreadCountResponse.builder()
+                    .userId(userId)
+                    .unreadCount(0L)
+                    .build();
+        }
     }
 
     @Transactional(readOnly = true)
@@ -102,7 +149,7 @@ public class NotificationService {
         return notificationRepository.findAll().stream()
                 .sorted(Comparator.comparing(Notification::getCreatedAt).reversed())
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -110,6 +157,7 @@ public class NotificationService {
         List<Notification> unread = notificationRepository.findByUserIdAndIsReadOrderByCreatedAtDesc(userId, false);
         unread.forEach(notification -> notification.setRead(true));
         notificationRepository.saveAll(unread);
+        log.info("Marked {} notifications as read for userId={}", unread.size(), userId);
         return unread.size();
     }
 
@@ -119,61 +167,21 @@ public class NotificationService {
             throw new ResourceNotFoundException("Notification", notificationId);
         }
         notificationRepository.deleteById(notificationId);
+        log.info("Deleted notification: id={}", notificationId);
     }
-
-    // ─────────────────────────────────────────────────────────────────────
-    // 5. Send email (optional – controlled by app.email.enabled flag)
-    // ─────────────────────────────────────────────────────────────────────
-
-    public void sendEmail(Long userId, String subject, String message) {
-        if (!emailEnabled) {
-            log.info("Email sending is disabled. userId={} | Subject: {}", userId, subject);
-            return;
-        }
-
-        // In a real system you'd look up the user's email from auth-service.
-        // Here we log and send to a placeholder; replace with actual lookup.
-        String recipientEmail = resolveUserEmail(userId);
-        if (recipientEmail == null) {
-            log.warn("Could not resolve email for userId={}. Skipping email send.", userId);
-            return;
-        }
-
-        try {
-            SimpleMailMessage mail = new SimpleMailMessage();
-            mail.setFrom(emailFrom);
-            mail.setTo(recipientEmail);
-            mail.setSubject(subject);
-            mail.setText(message);
-            mailSender.send(mail);
-            log.info("Email sent to {} for userId={}", recipientEmail, userId);
-        } catch (Exception e) {
-            log.error("Failed to send email for userId={}: {}", userId, e.getMessage());
-        }
-    }
-
-    // ─────────────────────────────────────────────────────────────────────
-    // Private helpers
-    // ─────────────────────────────────────────────────────────────────────
+    // Private mapping helper.
 
     private NotificationResponse toResponse(Notification n) {
         return NotificationResponse.builder()
                 .notificationId(n.getNotificationId())
                 .userId(n.getUserId())
+                .title(n.getTitle())
                 .type(n.getType())
                 .message(n.getMessage())
                 .isRead(n.isRead())
                 .createdAt(n.getCreatedAt())
+                .eventId(n.getEventId())
+                .metadataJson(n.getMetadataJson())
                 .build();
-    }
-
-    /**
-     * Placeholder email resolver.
-     * Replace with a Feign call to auth-service when available.
-     */
-    private String resolveUserEmail(Long userId) {
-        // TODO: inject ResumeClient / AuthClient and call GET /users/{userId}
-        log.debug("resolveUserEmail called for userId={} — returning null (no auth-service client)", userId);
-        return null;
     }
 }
